[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scripts/Autoload/Root.gd" type="Script" id=1]
[ext_resource path="res://Assets/BG.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Main/Background1.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Main/Background2.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Main/Plane.gd" type="Script" id=5]
[ext_resource path="res://Assets/Plane/Plane/Shoot (1).png" type="Texture" id=6]
[ext_resource path="res://Assets/Plane/Plane/Shoot (2).png" type="Texture" id=7]
[ext_resource path="res://Assets/Plane/Plane/Shoot (3).png" type="Texture" id=8]
[ext_resource path="res://Assets/Plane/Plane/Shoot (4).png" type="Texture" id=9]
[ext_resource path="res://Assets/Plane/Plane/Shoot (5).png" type="Texture" id=10]
[ext_resource path="res://Assets/Explosion/explosion00.png" type="Texture" id=11]
[ext_resource path="res://Assets/Explosion/explosion01.png" type="Texture" id=12]
[ext_resource path="res://Assets/Explosion/explosion02.png" type="Texture" id=13]
[ext_resource path="res://Assets/Explosion/explosion03.png" type="Texture" id=14]
[ext_resource path="res://Assets/Explosion/explosion04.png" type="Texture" id=15]
[ext_resource path="res://Assets/Explosion/explosion05.png" type="Texture" id=16]
[ext_resource path="res://Assets/Explosion/explosion06.png" type="Texture" id=17]
[ext_resource path="res://Assets/Explosion/explosion07.png" type="Texture" id=18]
[ext_resource path="res://Assets/Explosion/explosion08.png" type="Texture" id=19]
[ext_resource path="res://Assets/Plane/Plane/Dead (1).png" type="Texture" id=20]
[ext_resource path="res://Assets/Plane/Plane/Fly (1).png" type="Texture" id=21]
[ext_resource path="res://Assets/Plane/Plane/Fly (2).png" type="Texture" id=22]
[ext_resource path="res://Assets/Spikes/SpikeblockWood.png" type="Texture" id=23]
[ext_resource path="res://Scripts/Main/ScoreArea.gd" type="Script" id=24]
[ext_resource path="res://Scripts/Main/Camera2D.gd" type="Script" id=25]
[ext_resource path="res://icon.png" type="Texture" id=26]
[ext_resource path="res://Music/Morning.ogg" type="AudioStream" id=27]
[ext_resource path="res://Music/Jump.wav" type="AudioStream" id=28]
[ext_resource path="res://Music/Shoot.wav" type="AudioStream" id=29]
[ext_resource path="res://Music/Explosion2.wav" type="AudioStream" id=30]
[ext_resource path="res://Music/Out_of_bounds.wav" type="AudioStream" id=31]
[ext_resource path="res://Fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=32]
[ext_resource path="res://Scripts/Main/Score.gd" type="Script" id=33]
[ext_resource path="res://Scripts/Main/Bullets.gd" type="Script" id=34]
[ext_resource path="res://Assets/Instructions.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "shoot",
"speed": 15.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "explosion",
"speed": 3.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ) ],
"loop": false,
"name": "dead",
"speed": 1.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "fly",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 35.7285
height = 48.4757

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 634.188, 14.4754 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 5.99773, 287.175 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 31, 30 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 31, 32 )

[sub_resource type="DynamicFont" id=7]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 32 )
_sections_unfolded = [ "Font", "Resource" ]

[sub_resource type="DynamicFont" id=8]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 32 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Background1" type="Sprite" parent="." index="0"]

scale = Vector2( 0.821643, 0.549 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Background2" type="Sprite" parent="." index="1"]

position = Vector2( 1198, 0 )
scale = Vector2( 0.821643, 0.549 )
texture = ExtResource( 2 )
centered = false
flip_h = true
script = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Plane" type="KinematicBody2D" parent="." index="2"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 10
collision/safe_margin = 0.08
script = ExtResource( 5 )
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="PlaneSprite" type="AnimatedSprite" parent="Plane" index="0"]

scale = Vector2( 0.23, 0.23 )
frames = SubResource( 1 )
animation = "fly"
frame = 1
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plane" index="1"]

position = Vector2( 0, -2.81573 )
rotation = 1.5708
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Spikes" type="Node2D" parent="." index="3"]

editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Spikes" index="0"]

position = Vector2( -4.77185, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite25" type="Sprite" parent="Spikes" index="1"]

position = Vector2( -108.842, -2.414 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite7" type="Sprite" parent="Spikes" index="2"]

position = Vector2( 311.771, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite16" type="Sprite" parent="Spikes" index="3"]

position = Vector2( 628.314, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite21" type="Sprite" parent="Spikes" index="4"]

position = Vector2( 944.857, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite4" type="Sprite" parent="Spikes" index="5"]

position = Vector2( 153.679, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite9" type="Sprite" parent="Spikes" index="6"]

position = Vector2( 470.222, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite14" type="Sprite" parent="Spikes" index="7"]

position = Vector2( 786.765, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite20" type="Sprite" parent="Spikes" index="8"]

position = Vector2( 1103.31, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite2" type="Sprite" parent="Spikes" index="9"]

position = Vector2( 48.284, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite26" type="Sprite" parent="Spikes" index="10"]

position = Vector2( -55.7858, -2.414 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite10" type="Sprite" parent="Spikes" index="11"]

position = Vector2( 364.827, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite15" type="Sprite" parent="Spikes" index="12"]

position = Vector2( 681.37, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite24" type="Sprite" parent="Spikes" index="13"]

position = Vector2( 997.913, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite6" type="Sprite" parent="Spikes" index="14"]

position = Vector2( 206.735, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite12" type="Sprite" parent="Spikes" index="15"]

position = Vector2( 523.278, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite18" type="Sprite" parent="Spikes" index="16"]

position = Vector2( 839.82, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite22" type="Sprite" parent="Spikes" index="17"]

position = Vector2( 1156.36, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite3" type="Sprite" parent="Spikes" index="18"]

position = Vector2( 99.906, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite8" type="Sprite" parent="Spikes" index="19"]

position = Vector2( 416.449, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite13" type="Sprite" parent="Spikes" index="20"]

position = Vector2( 732.992, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite23" type="Sprite" parent="Spikes" index="21"]

position = Vector2( 1049.53, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite5" type="Sprite" parent="Spikes" index="22"]

position = Vector2( 258.357, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite11" type="Sprite" parent="Spikes" index="23"]

position = Vector2( 574.9, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite17" type="Sprite" parent="Spikes" index="24"]

position = Vector2( 891.442, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite19" type="Sprite" parent="Spikes" index="25"]

position = Vector2( 1207.99, -3.60564 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 23 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="CeilingSpikes" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
input_pickable = false
collision_layer = 8
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CeilingSpikes" index="0"]

position = Vector2( 631.898, 14.5426 )
shape = SubResource( 3 )

[node name="ScoreArea" type="Area2D" parent="." index="5"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 24 )
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea" index="0"]

position = Vector2( 0, 318.531 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="6"]

position = Vector2( 600.447, 300.362 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 25 )

[node name="Jump" type="TouchScreenButton" parent="." index="7"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 592.998, -0.741653 )
scale = Vector2( 9.47659, 9.68761 )
normal = ExtResource( 26 )
pressed = null
bitmask = null
shape = SubResource( 5 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_select"
visibility_mode = 0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Shoot" type="TouchScreenButton" parent="." index="8"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( -7.36503, 0.486084 )
scale = Vector2( 9.39986, 9.39986 )
normal = ExtResource( 26 )
pressed = null
bitmask = null
shape = SubResource( 6 )
shape_centered = true
shape_visible = true
passby_press = false
action = "ui_right"
visibility_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="BladeSpawnTimer" type="Timer" parent="." index="9"]

process_mode = 0
wait_time = 1.0
one_shot = true
autostart = true

[node name="BulletSpawnTimer" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="IncreaseScoreIncrement" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="Instruction" type="Timer" parent="." index="12"]

process_mode = 1
wait_time = 2.3
one_shot = true
autostart = true

[node name="SoundAndMusic" type="Node2D" parent="." index="13"]

editor/display_folded = true

[node name="GameMusic" type="AudioStreamPlayer" parent="SoundAndMusic" index="0"]

stream = ExtResource( 27 )
volume_db = -15.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Jump" type="AudioStreamPlayer" parent="SoundAndMusic" index="1"]

stream = ExtResource( 28 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Shoot" type="AudioStreamPlayer" parent="SoundAndMusic" index="2"]

stream = ExtResource( 29 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Explosion" type="AudioStreamPlayer" parent="SoundAndMusic" index="3"]

stream = ExtResource( 30 )
volume_db = -13.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Fall" type="AudioStreamPlayer" parent="SoundAndMusic" index="4"]

stream = ExtResource( 31 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="CurrentScore" type="Label" parent="." index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = -32.0
margin_right = 303.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.730471, 0.11698, 0.11698, 1 )
text = "SCORE: 1897"
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 33 )
_sections_unfolded = [ "Margin", "Rect", "custom_colors", "custom_fonts" ]

[node name="Bullets" type="Label" parent="." index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = -32.0
margin_right = 362.0
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.730471, 0.11698, 0.11698, 1 )
text = "Bullets: 3"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 34 )
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Instructions" type="TextureRect" parent="." index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 430.0
margin_top = 210.0
margin_right = 770.0
margin_bottom = 388.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 35 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[connection signal="origin" from="Background1" to="Background2" method="_on_Background1_origin"]

[connection signal="origin" from="Background2" to="Background1" method="_on_Background2_origin"]

[connection signal="shoot" from="Plane" to="." method="_on_Plane_shoot"]

[connection signal="animation_finished" from="Plane/PlaneSprite" to="." method="_on_PlaneSprite_animation_finished"]

[connection signal="timeout" from="BladeSpawnTimer" to="." method="_on_BladeSpawnTimer_timeout"]

[connection signal="timeout" from="BulletSpawnTimer" to="." method="_on_BulletSpawnTimer_timeout"]

[connection signal="timeout" from="IncreaseScoreIncrement" to="ScoreArea" method="_on_IncreaseScoreIncrement_timeout"]

[connection signal="timeout" from="Instruction" to="." method="_on_Instruction_timeout"]


